src/css/main.css
/* ... */
@media screen and (max-width: 1280px) {
  #sidebar {
    height: 3.5em;
    left: 0;
    line-height: 3.5em;
    overflow: hidden;
    padding: 0 1.5em;
    position: fixed;
    text-align: left;
    top: 0;
    width: 100%;
  }

  #sidebar > .inner {
    flex-direction: row;
    align-items: stretch;
    height: inherit;
    line-height: inherit;
  }

  #sidebar nav {
    height: inherit;
    line-height: inherit;
    margin: 0 0 0 2em;
  }

  #sidebar nav > ul {
    display: flex;
    height: inherit;
    line-height: inherit;
  }

  #sidebar nav > ul > li {
    display: block;
    height: inherit;
    line-height: inherit;
    margin: 0 0 0 2em;
    padding: 0;
  }

  #sidebar nav a {
    display: block;
    height: inherit;
    line-height: inherit;
    padding: 0;
  }

  #sidebar nav a:after,
  #sidebar nav a:before {
    display: none;
  }
}

@media screen and (max-width: 736px) {
  #sidebar {
    display: none;
  }
}

/* ============================================
   Main Wrapper
   ============================================ */
#sidebar + #wrapper {
  margin-left: 18em;
}

@media screen and (max-width: 1280px) {
  #sidebar + #wrapper {
    margin-left: 0;
    padding-top: 3.5em;
  }
}

@media screen and (max-width: 736px) {
  #sidebar + #wrapper {
    padding-top: 0;
  }
}

/* ============================================
   Footer
   ============================================ */
#sidebar + #wrapper + #footer {
  margin-left: 18em;
}

@media screen and (max-width: 1280px) {
  #sidebar + #wrapper + #footer {
    margin-left: 0;
  }
}

#footer > .inner a {
  border-bottom-color: rgba(255, 255, 255, 0.15);
}

#footer > .inner a:hover {
  border-bottom-color: transparent;
}

#footer > .inner .menu {
  font-size: 0.8em;
  color: rgba(255, 255, 255, 0.45);
}

/* ============================================
   Font Awesome Spinning Animation
   ============================================ */
.fa-spin {
  animation: fa-spin 2s infinite linear;
}

@keyframes fa-spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

